@@ -1,5 +1,9 @@
 2009-03-02  Alan Modra  <amodra@bigpond.net.au>
 
+	2009-02-01  Jan Kratochvil  <jan.kratochvil@redhat.com>
+	* elf-eh-frame.c (REQUIRE_CLEARED_RELOCS) Remove.
+	(_bfd_elf_parse_eh_frame): Do not check relocations for removed FDEs.
+
 	2009-01-26  Nathan Sidwell  <nathan@codesourcery.com>
 	* elf32-ppc.c (ppc_elf_relax_section): Add space for relocs
 	describing the trampolines.
